--- a/app/design/frontend/creo/default/template/email/order/items/creditmemo/default.phtml
+++ b/app/design/frontend/creo/default/template/email/order/items/creditmemo/default.phtml
@@ -35,7 +35,7 @@
                 <dl style="margin:0; padding:0;">
                     <?php foreach ($this->getItemOptions() as $option): ?>
                         <dt><strong><em><?php echo $option['label'] ?></em></strong></dt>
-                        <dd style="margin:0; padding:0 0 0 9px;"><?php echo nl2br($option['value']) ?></dd>
+                        <dd style="margin:0;padding:0;"><?php echo nl2br($option['value']) ?></dd>
                     <?php endforeach; ?>
                 </dl>
             <?php endif; ?>
