--- a/app/design/frontend/creo/default/template/email/order/items/invoice/default.phtml
+++ b/app/design/frontend/creo/default/template/email/order/items/invoice/default.phtml
@@ -98,15 +98,10 @@ if(empty($images)) {
                 <dl style="margin:0; padding:0;">
 
             <?php foreach ($this->getItemOptions() as $option): ?>
-
                             <dt><strong><em><?php echo $option['label'] ?></em></strong></dt>
-
-                            <dd style="margin:0; padding:0 0 0 9px;">
-
+                            <dd style="margin:0;padding:0;">
                                 <?php echo nl2br($option['value']) ?>
-
                             </dd>
-
                         <?php endforeach; ?>
 
                     </dl>
@@ -126,8 +121,7 @@ if(empty($images)) {
         	</div>
 
         </td>
-
-		<td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $_item->getQtyOrdered()*1 ?></h2></td>
+        <td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $_item->getQtyOrdered()*1 ?></h2></td>
 
         <td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $_order->formatPrice($_item->getRowTotal()) ?></h2></td>
 
@@ -148,10 +142,7 @@ if(empty($images)) {
                 <strong><?php echo $this->__('Message:'); ?></strong><br /><?php echo $this->escapeHtml($_giftMessage->getMessage()) ?>
 
             </td>
-
         </tr>
-
     <?php endif; ?>
-
 </tbody>
 
