--- a/app/locale/en_US/template/email/html/footer.html
+++ b/app/locale/en_US/template/email/html/footer.html
@@ -13,10 +13,10 @@
 
       <tr>
         <td><ul class="list1" style="list-style:none;">
-            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img style="display:inline-block;" src="{{skin url="images/icon1.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_phone}}</a></li>
-            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img style="display:inline-block;" src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">talktous@creoroom.com</a></li>
-            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img style="display:inline-block;" src="{{skin url="images/icon3.png" _area='frontend'}}" style="padding-right: 5px;">Saturday to Thursday</a></li>
-            <li style="margin-bottom: 10px;"><a href="#" style=" font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img style="display:inline-block;" src="{{skin url="images/icon4.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_hours}}</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img style="display:inline-block;padding:0 10px;" src="{{skin url="images/icon1.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_phone}}</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img style="display:inline-block;padding:0 10px;" src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">talktous@creoroom.com</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img style="display:inline-block;padding:0 10px;" src="{{skin url="images/icon3.png" _area='frontend'}}" style="padding-right: 5px;">Saturday to Thursday</a></li>
+            <li style="margin-bottom: 10px;"><a href="#" style=" font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img style="display:inline-block;padding:0 10px;" src="{{skin url="images/icon4.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_hours}}</a></li>
           </ul></td>
       </tr>
     </table >
