add saudi langauge

--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -133,13 +133,13 @@ if(Mage::registry('current_product')) {
 		</div>
 </header>
 
-<?php
-/* ?><div class="header-language-background">
+<div class="header-language-background">
 	<div class="header-language-container">
 	<div class="store-language-container">
 	<?php echo $this->getChildHtml('store_language') ?>
 	</div>
-
+<?php
+/* ?>
 	<?php echo $this->getChildHtml('currency_switcher') ?>
 
 	<p class="welcome-msg"><?php echo $this->getChildHtml('welcome') ?> <?php echo $this->getAdditionalHtml() ?></p>
