--- a/app/design/frontend/creo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/footer.phtml
@@ -56,11 +56,22 @@
 									<h3><?php  echo $acount->getTitle(); ?></h3>
 									<?php echo $acount->getContent(); ?>
 								</div>
-								<div class="column">
-                                <?php $about = Mage::getModel('cms/block')->load('about_us'); ?>
-									<h3><?php  echo $about->getTitle(); ?></h3>
-									<?php echo $about->getContent(); ?>
-								</div>
+<div class="column">
+<?php $about = Mage::getModel('cms/block')->load('about_us'); ?>
+<h3><?php  echo $about->getTitle(); ?></h3>
+<?php echo $about->getContent(); ?>
+</div>
+<?php
+$paymentlogos = Mage::getModel('cms/block')->load('footer-payment-logos');
+$paymentlogos2 = $this->getLayout()->createBlock('cms/block')->setBlockId('footer-payment-logos')->toHtml();
+if ($paymentlogos2 != '') { ?>
+<div class="column">
+<h3><?php  echo $paymentlogos->getTitle(); ?></h3>
+<?php echo $paymentlogos2; ?>
+</div>
+<?php
+}
+?>
 							</div>
 						</div>
 					</div>
