--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/billing.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/billing.phtml
@@ -75,24 +75,21 @@ $has_addr	= $this->customerHasAddresses();
         <div class="short"<?php if($state_r === 'hidden'){ echo ' style="display:none" ';}?>>
         <label for="billing:region_id"<?php if($state_r === 'required'){ echo ' class="required" ';}?>> <?php echo $this->__('State / Province') ?> </label>
         <?php if($state_r === 'required'){ echo ' <sup>*</sup> ';}?>
-     	<!--<div class="billingcountryselect">
+     	<div class="billingcountryselect">
         <select id="billing:region_id" name="billing[region_id]" title="<?php echo $this->__('State/Province') ?>" class=" billingadressselect validate-select<?php if($state_r === 'required') { echo ' required-entry';}?>" style="display:none;">
           <option value=""><?php echo $this->__('Select One') ?></option>
         </select>
         <span class="fake-select BillingStateSelectBoxArrows"></span>
 
         <script type="text/javascript">
-						//<![CDATA[
-							$('billing:region_id').setAttribute('defaultValue',  "<?php echo $this->getBillAddress()->getRegionId() ?>");
-						//]]>
-						</script>
+	//<![CDATA[
+		$('billing:region_id').setAttribute('defaultValue',  "<?php echo $this->getBillAddress()->getRegionId() ?>");
+	//]]>
+	</script>
         <input type="text" id="billing:region" name="billing[region]" value="<?php echo $this->htmlEscape($this->getBillAddress()->getRegion()) ?>"  title="<?php echo $this->__('State/Province') ?>" class="validate-alpha t1<?php if($state_r === 'required'){ echo ' required-entry';}?>" maxlength="20" style="display:none;" />
-        
          </div>
-      </div>--> 
-        
-		</div>
       </div>
+		</div>
       <div class="form-group col-lg-2 col-sm-4">
         <?php
 			$zip_r	= Mage::getStoreConfig('onestepcheckout/address_form/zip');
@@ -170,7 +167,7 @@ $has_addr	= $this->customerHasAddresses();
 				?>
             
    </div>
-            
+
             
      
       <div class="col-lg-12">   
@@ -181,11 +178,10 @@ $has_addr	= $this->customerHasAddresses();
         </li>
       </ul>
       </div>
-  
       <?php
 				} 
 				else
-				{ 				
+				{
 				?>
       <input type="hidden" name="billing[register_account]" value="1"/>
       <?php 
@@ -210,8 +206,7 @@ $has_addr	= $this->customerHasAddresses();
       <?php 
 			endif; 
 			?>
-         
-
+</div>
       
          
      
