--- a/app/design/frontend/creo_mobile/default/template/onestepcheckout/onepage/billing.phtml
+++ b/app/design/frontend/creo_mobile/default/template/onestepcheckout/onepage/billing.phtml
@@ -75,7 +75,7 @@ $has_addr	= $this->customerHasAddresses();
         <div class="short"<?php if($state_r === 'hidden'){ echo ' style="display:none" ';}?>>
         <label for="billing:region_id"<?php if($state_r === 'required'){ echo ' class="required" ';}?>> <?php echo $this->__('State / Province') ?> </label>
         <?php if($state_r === 'required'){ echo ' <sup>*</sup> ';}?>
-     	<!--<div class="billingcountryselect">
+     	<div class="billingcountryselect">
         <select id="billing:region_id" name="billing[region_id]" title="<?php echo $this->__('State/Province') ?>" class=" billingadressselect validate-select<?php if($state_r === 'required') { echo ' required-entry';}?>" style="display:none;">
           <option value=""><?php echo $this->__('Select One') ?></option>
         </select>
@@ -89,10 +89,9 @@ $has_addr	= $this->customerHasAddresses();
         <input type="text" id="billing:region" name="billing[region]" value="<?php echo $this->htmlEscape($this->getBillAddress()->getRegion()) ?>"  title="<?php echo $this->__('State/Province') ?>" class="validate-alpha t1<?php if($state_r === 'required'){ echo ' required-entry';}?>" maxlength="20" style="display:none;" />
         
          </div>
-      </div>--> 
+      </div> 
         
 		</div>
-      </div>
       <div class="form-group col-lg-2 col-sm-4">
         <?php
 			$zip_r	= Mage::getStoreConfig('onestepcheckout/address_form/zip');
@@ -206,15 +205,10 @@ $has_addr	= $this->customerHasAddresses();
             <input type="password" name="billing[confirm_password]" title="<?php echo $this->__('Confirm Password') ?>" id="billing:confirm_password" class="t1 required-entry validate-cpassword" />
         
       </div>
-    
-      <?php 
+      <?php
 			endif; 
 			?>
-         
-
-      
-         
-     
+</div>
       <div class="col-lg-12">  
       <ul class="showShippingAddress">
         <?php 
