--- a/skin/frontend/creo/default/css/custom.sami.css
+++ b/skin/frontend/creo/default/css/custom.sami.css
@@ -3,10 +3,7 @@
     padding-bottom: 10px;
 }
 
-.checkout-form-headings {
-    padding-bottom: 0;margin-bottom:0;
-}
-
+.checkout-form-headings{padding-bottom:0;}
 .checkout-form-headings h1 {
     margin-bottom: 0;
     text-transform: uppercase;
