--- a/app/design/frontend/creo_mobile/default/template/onestepcheckout/onepage/billing.phtml
+++ b/app/design/frontend/creo_mobile/default/template/onestepcheckout/onepage/billing.phtml
@@ -99,7 +99,7 @@ $has_addr	= $this->customerHasAddresses();
 			if ($zip_r !== 'hidden' || $phone_r !== 'hidden') : 
 			?>
         <?php if ($zip_r !== 'hidden') : ?>
-        <label id="billing:postcodelabel" for="billing:postcode"<?php if($zip_r === 'required'){echo ' class="required" ';}?>> <?php echo $this->__('Zip Code') ?> </label>
+        <label id="billing:postcodelabel" for="billing:postcode"<?php if($zip_r === 'required'){echo ' class="required" ';}?>> <?php echo $this->__('Zip Code') ?> </label><sup id="billing:ziprequired">*</sup>
         <?php if($zip_r === 'required'){echo ' <sup>*</sup>';}?>
         <input type="text" title="<?php echo $this->__('Zip/Postal Code') ?>" name="billing[postcode]" id="billing:postcode" value="<?php echo $this->htmlEscape($this->getBillAddress()->getPostcode()) ?>" class="t1 validate-zip-international<?php if($zip_r === 'required'){echo ' required-entry ';}?>" maxlength="20" />
         <?php endif; ?>
