checkout page css fixes

--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/billing.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/billing.phtml
@@ -108,7 +108,7 @@ $has_addr = $this->customerHasAddresses();
               <span class="fake-select BillingCountrySelectBoxArrows"></span>
             </div>
           </div>
-          <div class="form-group col-lg-2 col-sm-4 hidddenDiv">
+          <div class="form-group col-lg-12 hidddenDiv">
             <?php /*?> <div class="full"<?php if($country_r === 'hidden'){ echo ' style="display:none" ';}?>><?php */?>
               <?php
                       $fax_r  = Mage::getStoreConfig('onestepcheckout/address_form/fax');
