--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -4059,7 +4059,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	padding: 0;
 }
 .showShippingAddress label,.address-book-area label{margin:1px 5px 0 10px !important;float: none !important;}
-.showShippingAddress label{}
+.onestepcheckout-index-index .showShippingAddress label{margin-left: 25px !important;margin-top: 10px !important;}
 .checkout-form .form-group input[type="checkbox"] {
 	float: left;
 	width: auto;
