--- a/app/design/frontend/creo_mobile/default/template/onestepcheckout/onepage/billing.phtml
+++ b/app/design/frontend/creo_mobile/default/template/onestepcheckout/onepage/billing.phtml
@@ -87,7 +87,7 @@ $has_addr	= $this->customerHasAddresses();
 						//]]>
 						</script>
         <input type="text" id="billing:region" name="billing[region]" value="<?php echo $this->htmlEscape($this->getBillAddress()->getRegion()) ?>"  title="<?php echo $this->__('State/Province') ?>" class="validate-alpha t1<?php if($state_r === 'required'){ echo ' required-entry';}?>" maxlength="20" style="display:none;" />
-        
+        <!-- </div> faulty div-->
          </div>
       </div> 
         
@@ -99,11 +99,11 @@ $has_addr	= $this->customerHasAddresses();
 			if ($zip_r !== 'hidden' || $phone_r !== 'hidden') : 
 			?>
         <?php if ($zip_r !== 'hidden') : ?>
-        <label id="billing:postcodelabel" for="billing:postcode"<?php if($zip_r === 'required'){echo ' class="required" ';}?>> <?php echo $this->__('Zip Code') ?> </label>
+        <label id="billing:postcodelabel" for="billing:postcode"<?php if($zip_r === 'required'){echo ' class="required" ';}?>> <?php echo $this->__('Zip Code') ?> </label><sup id="billing:ziprequired">*</sup>
         <?php if($zip_r === 'required'){echo ' <sup>*</sup>';}?>
         <input type="text" title="<?php echo $this->__('Zip/Postal Code') ?>" name="billing[postcode]" id="billing:postcode" value="<?php echo $this->htmlEscape($this->getBillAddress()->getPostcode()) ?>" class="t1 validate-zip-international<?php if($zip_r === 'required'){echo ' required-entry ';}?>" maxlength="20" />
         <?php endif; ?>
-        <?php endif ?>
+        <?php endif; ?>
          <?php
 	        $country_r = Mage::getStoreConfig('onestepcheckout/address_form/country');  
 	        ?>
@@ -115,7 +115,7 @@ $has_addr	= $this->customerHasAddresses();
         </div>
         
       </div>
-      <div class="form-group col-lg-2 col-sm-4 hidddenDiv">
+      <div class="form-group col-lg-12 hidddenDiv">
             <?php /*?> <div class="full"<?php if($country_r === 'hidden'){ echo ' style="display:none" ';}?>><?php */?>
     
         <?php
@@ -172,7 +172,7 @@ $has_addr	= $this->customerHasAddresses();
             
             
      
-      <div>   
+      <div class="col-lg-12 paddingzero">   
       <ul class="checkoutcreatNewAccount">
         <li class="options">
           <input type="checkbox" name="billing[register_account]" value="1" title="<?php echo $this->__('Create Account') ?>" id="billing:register_account" onClick="if(window.billing) billing.setCreateAccount(this.checked);"<?php if ($this->getBillAddress()->getRegisterAccount()):?> checked="checked"<?php endif;?> class="checkbox" />
@@ -208,8 +208,7 @@ $has_addr	= $this->customerHasAddresses();
       <?php
 			endif; 
 			?>
-</div>
-      <div>  
+      <div class="col-lg-12 paddingzero">  
       <ul class="showShippingAddress">
         <?php 
 			if ($logged && $has_addr){
