--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -1207,7 +1207,7 @@ a[class*='_selected_']{
 .cartPage_custome_responsive .qty-area { margin: 0 !important;}
 .cartPage_custome_responsive .text-area { text-align: center;}
 .categorypath-clothing-html #fme_filters_list img  { width: 100%;}
-
+.color_swatches_full_width { width: 100%;}
 @media only screen and (max-device-width:359px){
 .cart-btn-area .btn-holder .button2,
 .checkout-cart-index .btn-holder .btn-proceed-checkout,
