--- a/skin/frontend/creo/default/css/styles.css
+++ b/skin/frontend/creo/default/css/styles.css
@@ -371,6 +371,11 @@ body.page-print h2 {
     letter-spacing: 1px;
     text-transform: uppercase;
 }
+body.page-print .logo {
+    display: block;
+    height: auto;
+    width: 200px;
+}
 .page-print table, .page-print th, .page-print td {
   border: 1px solid #000;
   padding: 5px;
