back button on listing page

--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -90,7 +90,7 @@ if(Mage::registry('current_product')) {
 						</div>-->
 				</div>
 	<div class="store-language-container">
-	<?php echo $this->getChildHtml('store_language') ?>
+	<?php //echo $this->getChildHtml('store_language') ?>
 	</div>
 <?php echo $this->getChildHtml('topLinks') ?>
 
@@ -138,7 +138,7 @@ if(Mage::registry('current_product')) {
 <div class="header-language-background">
 	<div class="header-language-container">
 	<div class="store-language-container">
-	<?php echo $this->getChildHtml('store_language') ?>
+	<?php //echo $this->getChildHtml('store_language') ?>
 	</div>
 <?php
 /* ?>
