--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5517,7 +5517,7 @@ h3.inline-h span:before{
     display: none;
     left: 0;
     margin: 0;
-    padding: 0;
+    padding: 0 20%;
     position: absolute;
     right: 0;
     top: auto;
