back button on listing page on mobile version

--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
@@ -36,6 +36,7 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 
 ?>
 <div class="cate-drop-holder" id="fme_filters_list">
+<button id="goback" onclick="goback()" title="Back">Back</button>
 <span class="search-by">Search By Design</span>
 <div class="cate-open-close">
 <a href="javascript:;" class="opener"> View All</a>
