--- a/app/design/frontend/creo_mobile/default/layout/local.xml
+++ b/app/design/frontend/creo_mobile/default/layout/local.xml
@@ -5,6 +5,7 @@
 <action method="addCss"><stylesheet>jquery.mCustomScrollbar.css</stylesheet></action>
 <action method="setText"><text><![CDATA[<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed">]]></text></action>
 <action method="addItem"><type>skin_js</type><script>js/jquery.main.js</script></action>
+<action method="addItem"><type>skin_js</type><script>js/jquery.custom.js</script></action>
 <action method="addItem"><type>skin_js</type><script>js/jquery.mCustomScrollbar.js</script></action>
 <action method="addItem"><type>skin_js</type><script>bootstrap/js/bootstrap.min.js</script></action>
 <action method="addItem"><type>skin_js</type><name>js/bootstrpjPushMenu.js</name></action>
