--- a/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
@@ -17,7 +17,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
     <?php
 }
 ?>
-
+<button id="goback" onclick="goback()" title="Back">Back</button>
 <?php if ($this->canShowBlock()): $state = $this->getStateInfo() ?>
     <div class="block block-layered-nav">
         <?php /* ?> <div class="block-title">
