button css style added

--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -20,7 +20,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
     <?php
 }
 ?>
-<button id="goback" onclick="goback()" title="Back">Back</button>
+<div class="skewbtn1"><button id="goback" onclick="goback()" title="Back">< Back</button></div>
 
 <?php if ($this->canShowBlock()): $state = $this->getStateInfo() ?>
     <div class="block block-layered-nav">
