--- a/app/design/frontend/creo/default/template/extensions/collections/women.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/women.phtml
@@ -35,7 +35,7 @@
 $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 ?>
 <div class="cate-drop-holder">
-<button id="goback" onclick="goback()" title="Back">Back</button>
+<div class="skewbtn1"><button id="goback" onclick="goback()" title="Back">Back</button></div>
 <span class="search-by">Search By Design</span>
 <div class="cate-drop-frame">
 <a href="javascript:;" class="opener"> View All</a>
