--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/women.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/women.phtml
@@ -34,7 +34,7 @@
 <?php
 $_attrbiuteCollection = $this->getLoadedAttributeCollection(); ?>
 <div class="cate-drop-holder" id="fme_filters_list">
-<button id="goback" onclick="goback()" title="Back">Back</button>
+<div class="skewbtn1"><button id="goback" onclick="goback()" title="Back">Back</button></div>
 <span class="search-by">Search By Design</span>
 <div class="cate-open-close">
 <a href="javascript:;" class="opener"> View All</a>
