--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5520,7 +5520,7 @@ h3.inline-h span:before{
     border-width: 1px 0 8px;
     display: none;
     left: 0;
-    margin: -1px 0 0;
+    margin: 0;
     padding: 20px 25%;
     position: absolute;
     right: 0;
