shifting from layered navigation to defulat navigation

--- a/app/design/frontend/creo/default/template/catalog/layer/filter.phtml
+++ b/app/design/frontend/creo/default/template/catalog/layer/filter.phtml
@@ -54,7 +54,7 @@
                <?php  }else
 
                 {?>
-                 <span> <a href="<?php echo $this->urlEscape($_item->getUrl()) ?>" > </a>
+                <a href="<?php echo $this->urlEscape($_item->getUrl()) ?>" > 
                 <?php echo $_item->getLabel() ?>
 </a>
                 <?php /*if ($this->shouldDisplayProductCount()): ?>
