--- a/app/design/frontend/creo/default/template/mana/filters/items/list.phtml
+++ b/app/design/frontend/creo/default/template/mana/filters/items/list.phtml
@@ -15,7 +15,9 @@
 /* @var $this Mana_Filters_Block_Filter_Attribute */
 ?>
 <?php echo Mage::helper('mana_core')->getNamedHtml('mana_filters/markup', 'before_items', array('block' => $this)) ?>
-<ol class="m-filter-item-list <?php echo $this->getFilterOptions()->getIsReverse() ? 'm-reverse' : '' ?>">
+<div class="cate-open-close">
+<a id="currentvalue" class="opener" href="javascript:;"> View All</a>
+<ul id="fme_layered_universal_categories" class="slide m-filter-item-list <?php echo $this->getFilterOptions()->getIsReverse() ? 'm-reverse' : '' ?>">
 <?php foreach ($this->getItems() as $_item): ?>
     <li <?php if ($_item->getMShowSelected()): ?>class="m-selected-ln-item"<?php endif; ?>>
         <?php // MANA BEGIN ?>
@@ -29,9 +31,10 @@
         <?php endif; ?>
         <?php // MANA END ?>
         <?php if (Mage::getStoreConfigFlag('mana_filters/display/count')) : ?>
-            (<?php echo $_item->getCount() ?>)
+            <!-- (<?php //echo $_item->getCount() ?>) -->
         <?php endif; ?>
     </li>
 <?php endforeach ?>
-</ol>
+</ul>
+</div>
 <?php echo Mage::helper('mana_core')->getNamedHtml('mana_filters/markup', 'after_items', array('block' => $this)) ?>
