--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5081,6 +5081,7 @@ textarea {
 	font: 13px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
 	border: 1px solid #ccc;
 	width: 130px;
+	cursor: pointer;
 }
 #fme_filters_list .cate-open-close.active .opener,
 #fme_filters_list .cate-open-close:hover .opener {
@@ -5108,7 +5109,7 @@ textarea {
 #fme_filters_list #label_tshirt_color,#fme_filters_list ul#tshirt_color{display:none;}
 #fme_filters_list #label_gender{}
 #fme_filters_list ul#gender{}
-#fme_filters_list .cate-open-close:hover ul{display: block;}
+/*#fme_filters_list .cate-open-close:hover ul{display: block;}*/
 #fme_filters_list .cate-open-close ul {
 	margin: -1px 0 0;
 	padding: 0;
@@ -5518,9 +5519,9 @@ h3.inline-h span:before{
     right: 0;
     top: auto;
     width: 100%;
-    z-index: 9999;
+    z-index: 999;
 }
-#fme_filters_list .cate-open-close:hover ul{display: block;}
+/*#fme_filters_list .cate-open-close:hover ul{display: block;}*/
 #fme_filters_list .cate-open-close .slide li{
     width: 32.3%;
     margin: 0 0.5%;
